[gd_scene load_steps=2 format=3 uid="uid://restsite"]

[ext_resource type="Script" path="res://scripts/screens/rest_site.gd" id="1_rest"]

[node name="RestSite" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rest")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.06, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Rest Site"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Choose one action:"
horizontal_alignment = 1

[node name="OptionContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="RestButton" type="Button" parent="VBoxContainer/OptionContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
text = "Rest

Heal 30% HP
Creatures +50%"

[node name="TrainButton" type="Button" parent="VBoxContainer/OptionContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
text = "Train

Upgrade a
card"

[node name="ReorganizeButton" type="Button" parent="VBoxContainer/OptionContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
text = "Reorganize

Change Lead
Creature"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Player HP: 50/50
Creature HP: 4/4"
horizontal_alignment = 1
